fixed alignments

--- a/css/index.css
+++ b/css/index.css
@@ -63,7 +63,7 @@ padding-bottom: 1%;
    
 }
 .inputform{
-    margin-top: 15%;
+    margin-top: 10%;
     margin-bottom: 15%;
     color: aliceblue;
     font-weight: bold;
